<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderFragment"
    android:orientation="vertical">

    <!--order id-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txvTitleOrderId"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/edit_orderid" />

        <TextView
            android:id="@+id/txvOrderId"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/Text"/>

    </LinearLayout>

    <!--item name-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/edit_order_itemName" />

        <Spinner
            android:id="@+id/spinItemName"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <!--Amount-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/edit_orderAmount" />

        <EditText
            android:id="@+id/edtxtOrderAmount"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <!--Delivery date-->
    <LinearLayout
        android:id="@+id/llDeliveryDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/edit_orderDeliveryDate" />

        <TextView
            android:id="@+id/txvOrderDeliveryDate"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/Text"/>

    </LinearLayout>

    <!--Status-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txvTitleOrderStatus"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/edit_orderStatus" />

        <TextView
            android:id="@+id/txvOrderStatus"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/Text"/>
    </LinearLayout>

    <!--buttons-->
    <LinearLayout
        android:id="@+id/llEditBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnOrderUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_btn"
            android:layout_weight="1"
            style="@style/Button"
            android:layout_marginRight="10dp"
            />

        <Button
            android:id="@+id/btnOrderCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_btn"
            android:layout_weight="1"
            style="@style/Button"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llAddBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnPlaceOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_btn"
            style="@style/Button"
            />
    </LinearLayout>


</LinearLayout>